--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -125,7 +125,7 @@ jobs:
           update: true
 
           # Install packages after updating the system:
-          install: git base mingw-w64-x86_64-toolchain
+          install: git make base mingw-w64-x86_64-toolchain
         timeout-minutes: 10
 
       # Configure Git:
@@ -231,7 +231,7 @@ jobs:
       - name: 'Run build task'
         run: |
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
-          . "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }}
+          . "./tools/ci/github/script" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 360
 
       # View the log file if the previous step fails:
@@ -239,7 +239,7 @@ jobs:
         if: failure()
         run: |
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
-          . "$GITHUB_WORKSPACE/tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
+          . "./tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 5
 
       # Upload the log file:
