--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -229,10 +229,11 @@ jobs:
 
       # Run the build task:
       - name: 'Run build task'
+        env:
+          TEST_NPM_INSTALL_PKG: '@stdlib/stdlib'
+          TEST_NPM_INSTALL_GITHUB_URL: 'https://github.com/stdlib-js/stdlib'
         run: |
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
-          echo $GITHUB_WORKSPACE
-          make inspect.ROOT_DIR
           . "./tools/ci/github/script" ${{ matrix.BUILD_TASK }}
         timeout-minutes: 360
 
