--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -64,7 +64,7 @@ jobs:
         BUILD_TASK: ['test-npm-install']
 
         # Define the list of Node.js versions:
-        NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4', '0.12', '0.10']
+        NODE_VERSION: ['16', '14', '12', '10', '8', '6', '4']
 
         # Define the list of operating systems:
         OS: ['windows-latest']
@@ -98,12 +98,6 @@ jobs:
 
           - NODE_VERSION: '4'
             NPM_VERSION: '>2.7.0 <6.0.0'
-
-          - NODE_VERSION: '0.12'
-            NPM_VERSION: '>2.7.0 <4.0.0'
-
-          - NODE_VERSION: '0.10'
-            NPM_VERSION: '>2.7.0 <4.0.0'
 
     # Set defaults:
     defaults:
