--- a/.github/workflows/linux_benchmark.yml
+++ b/.github/workflows/linux_benchmark.yml
@@ -58,7 +58,7 @@ jobs:
       DISPLAY: ':99'
       LOG_DIR: './tmp/var/log'
       LOG_FILE_INSTALL: "${{ env.LOG_DIR }}/install.log"
-      LOG_FILE_BUILD_TASK: "${{ env.LOG_DIR }}/${{ matrix.BUILD_TASK }}"
+      LOG_FILE_BUILD_TASK: "${{ env.LOG_DIR }}/${{ matrix.BUILD_TASK }}.log"
       LOG_NUM_LINES: 5000
 
     # Define the build matrix strategy...
@@ -207,7 +207,7 @@ jobs:
       # Perform install sequence:
       - name: 'Perform install sequence'
         run: |
-          . "$GITHUB_WORKSPACE/tools/ci/github/script" install "${{ env.LOG_FILE_INSTALL }}"
+          . "$GITHUB_WORKSPACE/.github/workflows/scripts/task_runner" install "${{ env.LOG_FILE_INSTALL }}"
         timeout-minutes: 30
 
       # View the log file if the previous step fails:
@@ -221,7 +221,7 @@ jobs:
       # Run the build task:
       - name: 'Run build task'
         run: |
-          . "$GITHUB_WORKSPACE/tools/ci/github/script" ${{ matrix.BUILD_TASK }} "${{ env.LOG_FILE_BUILD_TASK }}"
+          . "$GITHUB_WORKSPACE/.github/workflows/scripts/task_runner" ${{ matrix.BUILD_TASK }} "${{ env.LOG_FILE_BUILD_TASK }}"
         timeout-minutes: 360
 
       # View the log file if the previous step fails:
