--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -50,6 +50,9 @@ jobs:
       CXX_COMPILER: 'g++'
       LINKER: 'g++'
       GITHUB: 'true'
+      LOG_DIR: './tmp/var/log'
+      LOG_FILE_BUILD_TASK: "${{ env.LOG_DIR }}/${{ matrix.BUILD_TASK }}.log"
+      LOG_NUM_LINES: 5000
 
     # Define the build matrix strategy...
     strategy:
@@ -129,6 +132,13 @@ jobs:
         #
         # [1]: https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration#Formatting-and-Whitespace
         run: git config --global core.autocrlf input
+        timeout-minutes: 2
+
+      # Initialize log files:
+      - name: 'Initialize log files'
+        run: |
+          mkdir -p "${{ env.LOG_DIR }}"
+          touch "${{ env.LOG_FILE_BUILD_TASK }}"
         timeout-minutes: 2
 
       # Configure NVS:
@@ -229,15 +239,15 @@ jobs:
           TEST_NPM_INSTALL_GITHUB_URL: 'https://github.com/stdlib-js/stdlib'
         run: |
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
-          . "./tools/ci/github/script" ${{ matrix.BUILD_TASK }}
+          . "./.github/workflows/scripts/task_runner" ${{ matrix.BUILD_TASK }} "${{ env.LOG_FILE_BUILD_TASK }}"
         timeout-minutes: 360
 
       # View the log file if the previous step fails:
       - name: 'View log file'
         if: failure()
         run: |
-          . "${{ env.NVS_HOME }}/nvs.sh" && nvs use ${{ matrix.NODE_VERSION }}
-          . "./tools/ci/github/on_failure" ${{ matrix.BUILD_TASK }}
+          echo "Printing the last ${{ env.LOG_NUM_LINES }} lines of log output..."
+          tail -${{ env.LOG_NUM_LINES }} "${{ env.LOG_FILE_BUILD_TASK }}"
         timeout-minutes: 5
 
       # Upload the log file:
@@ -246,10 +256,10 @@ jobs:
         if: always()
         with:
           # Define a name for the uploaded artifact (ensuring a unique name for each job):
-          name: ${{ matrix.BUILD_TASK }}-log-v${{ matrix.NODE_VERSION }}-${{ matrix.PLATFORM }}
+          name: ${{ matrix.BUILD_TASK }}_log_v${{ matrix.NODE_VERSION }}_${{ matrix.PLATFORM }}
 
           # Specify the path to the file to upload:
-          path: ./tmp/var/log/${{ matrix.BUILD_TASK }}.log
+          path: "${{ env.LOG_FILE_BUILD_TASK }}"
 
           # Specify the number of days to retain the artifact (default is 90 days):
           retention-days: 5
@@ -282,16 +292,16 @@ jobs:
       # Resolve notification data:
       - name: 'Resolve notification data'
         run: |
-          echo "NOTIFICATION_STATUS=${{ needs.test_npm_install.result}}" >> $GITHUB_ENV
+          echo 'NOTIFICATION_STATUS=${{ needs.test_npm_install.result}}' >> $GITHUB_ENV
           if [[ "${{ needs.test_npm_install.result }}" = "success" ]]; then
-            echo "NOTIFICATION_TEXT='**test_npm_install** workflow succeeded (windows)'" >> $GITHUB_ENV
-            echo "NOTIFICATION_AUTHOR_NAME=Success" >> $GITHUB_ENV
+            echo 'NOTIFICATION_TEXT=**test_npm_install** workflow succeeded (windows)' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Success' >> $GITHUB_ENV
           elif [[ "${{ needs.test_npm_install.result }}" = "failure" ]]; then
-            echo "NOTIFICATION_TEXT='**test_npm_install** workflow failed (windows)'" >> $GITHUB_ENV
-            echo "NOTIFICATION_AUTHOR_NAME=Failure" >> $GITHUB_ENV
+            echo 'NOTIFICATION_TEXT=**test_npm_install** workflow failed (windows)' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Failure' >> $GITHUB_ENV
           elif [[ "${{ needs.test_npm_install.result }}" = "cancelled" ]]; then
-            echo "NOTIFICATION_TEXT='**test_npm_install** workflow was canceled (windows)'" >> $GITHUB_ENV
-            echo "NOTIFICATION_AUTHOR_NAME=Canceled" >> $GITHUB_ENV
+            echo 'NOTIFICATION_TEXT=**test_npm_install** workflow was canceled (windows)' >> $GITHUB_ENV
+            echo 'NOTIFICATION_AUTHOR_NAME=Canceled' >> $GITHUB_ENV
           else
             exit 1
           fi
