Set display names and add comments

--- a/.github/workflows/standalone_publish.yml
+++ b/.github/workflows/standalone_publish.yml
@@ -23,11 +23,19 @@ name: standalone_publish
 on:
   push:
     tags: v[0-9]+.[0-9]+.[0-9]+
+
+  # Allow the workflow to be manually run:
   workflow_dispatch:
 
 # Workflow jobs:
 jobs:
+
+  # Define a job for publishing standalone packages...
   publish:
+
+    # Define a display name:
+    name: "Publish"
+
     # Define the type of virtual host machine:
     runs-on: ubuntu-latest
 
