Use absolute file paths

--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -51,9 +51,9 @@ jobs:
       LINKER: 'g++'
       GITHUB: 'true'
       DISPLAY: ':99'
-      LOG_DIR: './tmp/var/log'
-      LOG_FILE_INSTALL: "./tmp/var/log/install.log"
-      LOG_FILE_BUILD_TASK: "./tmp/var/log/${{ matrix.BUILD_TASK }}.log"
+      LOG_DIR: '$GITHUB_WORKSPACE/tmp/var/log'
+      LOG_FILE_INSTALL: "$GITHUB_WORKSPACE/tmp/var/log/install.log"
+      LOG_FILE_BUILD_TASK: "$GITHUB_WORKSPACE/tmp/var/log/${{ matrix.BUILD_TASK }}.log"
       LOG_NUM_LINES: 5000
 
     # Define the build matrix strategy...
