--- a/.github/workflows/macos_benchmark.yml
+++ b/.github/workflows/macos_benchmark.yml
@@ -55,9 +55,9 @@ jobs:
       CXX_COMPILER: 'g++'
       LINKER: 'g++'
       GITHUB: 'true'
-      LOG_DIR: './tmp/var/log'
-      LOG_FILE_INSTALL: "./tmp/var/log/install.log"
-      LOG_FILE_BUILD_TASK: "./tmp/var/log/${{ matrix.BUILD_TASK }}.log"
+      LOG_DIR: '$GITHUB_WORKSPACE/tmp/var/log'
+      LOG_FILE_INSTALL: "$GITHUB_WORKSPACE/tmp/var/log/install.log"
+      LOG_FILE_BUILD_TASK: "$GITHUB_WORKSPACE/tmp/var/log/${{ matrix.BUILD_TASK }}.log"
       LOG_NUM_LINES: 5000
 
     # Define the build matrix strategy...
