Specify workflow concurrency groups
This ensures that only the latest action for each workflow runs.
If multiple commits happen in quick succession (or at least before
a workflow run finishes), we are likely to only be interested in
the results for the last commit. This does, however, complicate
identifying which commit led to a failed build, but so long as logging,
etc is plentiful, we should be able to track down the issue.

At a minimum, specifying concurrency groups is necessary to reduce
our carbon footprint.

--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -28,6 +28,15 @@ on:
   # Allow the workflow to be manually run:
   workflow_dispatch:
 
+# Workflow concurrency group:
+concurrency:
+
+  # Specify a group name:
+  group: ${{ github.workflow }}
+
+  # Specify whether to cancel any currently workflow in the same concurrency group:
+  cancel-in-progress: true
+
 # Workflow jobs:
 jobs:
 
