--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -24,6 +24,24 @@ on:
   push:
     branches:
       - develop
+    paths:
+      # List paths for which changes should trigger this workflow:
+      - 'lib/**/bin/**'
+      - 'lib/**/data/**'
+      - 'lib/**/etc/**'
+      - 'lib/**/include/**'
+      - 'lib/**/lib/**'
+      - 'lib/**/src/**'
+      - 'lib/**/test/**'
+
+      - 'lib/**/*.gyp'
+      - 'lib/**/*.gypi'
+      - 'lib/**/manifest.json'
+
+      - 'package.json'
+
+      # List paths for which changes should *not* trigger this workflow:
+      - '!lib/_tools/**'
 
   # Allow the workflow to be manually run:
   workflow_dispatch:
