--- a/.github/workflows/macos_test_npm_install.yml
+++ b/.github/workflows/macos_test_npm_install.yml
@@ -59,8 +59,8 @@ jobs:
       CXX_COMPILER: 'g++'
       LINKER: 'g++'
       GITHUB: 'true'
-      LOG_DIR: '$GITHUB_WORKSPACE/tmp/var/log'
-      LOG_FILE_BUILD_TASK: "$GITHUB_WORKSPACE/tmp/var/log/${{ matrix.BUILD_TASK }}.log"
+      LOG_DIR: "${{ github.workspace }}/tmp/var/log"
+      LOG_FILE_BUILD_TASK: "${{ github.workspace }}/tmp/var/log/${{ matrix.BUILD_TASK }}.log"
       LOG_NUM_LINES: 5000
 
     # Define the build matrix strategy...
