--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -174,6 +174,10 @@ jobs:
       # Install Node.js:
       - name: 'Install Node.js'
         run: |
+          echo 'Creating bash profile...'
+          touch "$HOME/.bash_profile"
+          echo 'if [ -f ~/.bashrc ]; then . ~/.bashrc; fi' >> "$HOME/.bash_profile"
+          echo ''
           echo 'Cloning NVS...'
           git clone https://github.com/jasongin/nvs "${{ env.NVS_HOME }}"
           echo ''
