--- a/.github/workflows/windows_test_npm_install.yml
+++ b/.github/workflows/windows_test_npm_install.yml
@@ -174,10 +174,6 @@ jobs:
       # Install Node.js:
       - name: 'Install Node.js'
         run: |
-          echo 'Creating bash profile...'
-          touch "$HOME/.bash_profile"
-          echo 'if [ -f ~/.bashrc ]; then . ~/.bashrc; fi' >> "$HOME/.bash_profile"
-          echo ''
           echo 'Cloning NVS...'
           git clone https://github.com/jasongin/nvs "${{ env.NVS_HOME }}"
           echo ''
@@ -188,6 +184,7 @@ jobs:
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs add ${{ matrix.NODE_VERSION }}
           echo ''
           echo 'Setting Node.js default executable...'
+          mkdir -p /usr/local/bin
           . "${{ env.NVS_HOME }}/nvs.sh" && nvs link ${{ matrix.NODE_VERSION }}
           echo ''
           echo "Activating Node.js version ${{matrix.NODE_VERSION }}..."
