--- a/.travis.yml
+++ b/.travis.yml
@@ -18,43 +18,54 @@
 
 # After changing this file, check it on:
 #
-#   http://lint.travis-ci.org/
+#   https://config.travis-ci.com/explore
 #
 # Known lint bugs:
 #
 # -   add-ons: https://github.com/travis-ci/travis-yaml/issues/58
 # -   osx: https://github.com/travis-ci/travis-yaml/issues/95
 
+# Specify the programming language:
 language: node_js
 
-# Is `sudo` required? If not, jobs are run on container-based infrastructure.
-sudo: true
-
+# Specify the list of Node.js versions on which we want to build:
 node_js:
   # Node.js
   - 'node'
-  - '13'
-  - '12'
-  - '11'
-  - '10'
-  - '9'
-  - '8'
-  - '7'
-  - '6'
-  - '5'
-  - '4'
-  # io.js
-  - '3'
-  - '2'
-  - '1'
-  # Node.js
-  - '0.12'
-  - '0.10'
+  # - '16'
+  # - '15'
+  # - '14'
+  # - '13'
+  # - '12'
+  # - '11'
+  # - '10'
+  # - '9'
+  # - '8'
+  # - '7'
+  # - '6'
+  # - '5'
+  # - '4'
+  # # io.js
+  # - '3'
+  # - '2'
+  # - '1'
+  # # Node.js
+  # - '0.12'
+  # - '0.10'
 
-
+# Specify the host operating system:
 os:
   - linux
-  # - osx
+
+# Specify which branches should trigger builds:
+branches:
+  only:
+    - develop
+
+# Configure Git:
+git:
+  # Set the clone depth, making sure to account for queued builds:
+  depth: 100
 
 # Compiling native modules for io.js v3.x.x or Node.js >=v4.0.0 requires a C++11 standard-compliant compiler. Specifically, either gcc >=4.8 or clang >=3.5. Add-ons are Linux-specific. Electron requires a virtual display server (xvfb) on Linux.
 addons:
@@ -72,7 +83,7 @@ addons:
       - xvfb
       - unzip
 
-
+# Specify environment variables:
 env:
   # Environment variables common to all jobs:
   global:
@@ -86,24 +97,15 @@ env:
     - NODE_PATH="$TRAVIS_BUILD_DIR/lib/node_modules"
 
   # Environment variables used to construct the build matrix:
-  matrix:
+  jobs:
     - BUILD_TASK='test-npm-install'
-    - BUILD_TASK='test'
-    - BUILD_TASK='benchmark'
-    - BUILD_TASK='examples'
-    - BUILD_TASK='test-coverage'
 
-
-matrix:
+# Configure the build matrix:
+jobs:
   # Flag to immediately finish a build if any one of the jobs fails:
   fast_finish: true
 
-
-# Set the clone depth:
-git:
-  depth: 100
-
-
+# Define steps to be performed before running installation steps:
 before_install:
   # Perform platform-specific initialization:
   - if [[ $TRAVIS_OS_NAME = "linux" ]]; then
@@ -139,22 +141,22 @@ before_install:
   - chmod +x ./tools/ci/travis/before_install
   - "./tools/ci/travis/before_install"
 
-
+# Define installation steps:
 install:
   # Run install tasks via `travis_retry` to address occasional `npm install` failures (see https://docs.travis-ci.com/user/common-build-problems/#travis_retry):
   - "travis_retry make FC=$FC FORTRAN_COMPILER=$FORTRAN_COMPILER install"
 
-
+# Define the build steps:
 script:
   - chmod +x ./tools/ci/travis/script
   - "./tools/ci/travis/script $BUILD_TASK"
 
-
+# Define the steps to run after completing the build steps:
 after_script:
   - chmod +x ./tools/ci/travis/after_script
   - "./tools/ci/travis/after_script"
 
-
+# Define notifications:
 notifications:
   slack:
     rooms:
