--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -18,6 +18,66 @@
 
 version: "2"
 
+# Configure maintainability [checks][1].
+#
+# [1]: https://docs.codeclimate.com/docs/advanced-configuration
+checks:
+  # Check for methods or functions defined with a high number of arguments.
+  argument-count:
+    enabled: true
+    config:
+      threshold: 4
+
+  # Check boolean logic that may be hard to understand.
+  complex-logic:
+    enabled: true
+    config:
+      threshold: 4
+
+  # Check for excessive lines of code within a single file.
+  file-lines:
+    enabled: true
+    config:
+      threshold: 300
+
+  # Check for functions or methods that may be hard to understand (cognitive complexity).
+  method-complexity:
+    enabled: true
+    config:
+      threshold: 5
+
+  # Check for classes defined with a high number of functions or methods.
+  method-count:
+    enabled: true
+    config:
+      threshold: 20
+
+  # Check for excessive lines of code within a single function or method.
+  method-lines:
+    enabled: true
+    config:
+      threshold: 100
+
+  # Check for deeply nested control structures like `if` or `case`.
+  nested-control-flow:
+    enabled: true
+    config:
+      threshold: 4
+
+  # Check for functions or methods with a high number of return statements.
+  return-statements:
+    enabled: true
+    config:
+      threshold: 5
+
+  # Check for duplicate code which is not identical but shares the same structure (e.g., variable names may differ).
+  similar-code:
+    enabled: true
+
+  # Check for duplicate code which is syntactically identical (but may be formatted differently).
+  identical-code:
+    enabled: true
+
 # Enable analysis [plugins][1].
 #
 # [1]: https://docs.codeclimate.com/docs/list-of-engines
@@ -107,18 +167,6 @@ plugins:
   # [1]: https://github.com/koalaman/shellcheck
   shellcheck:
     enabled: true
-
-  # Analyze source files for code similarity using [duplication][1].
-  #
-  # [1]: https://docs.codeclimate.com/docs/duplication
-  duplication:
-    enabled: true
-    config:
-      languages:
-        javascript:
-          mass_threshold: 40
-        python:
-          mass_threshold: 32
 
 # Specify which files/folders should be [ignored][1] when performing analyses.
 #
