Update exclusion patterns

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -175,7 +175,18 @@ exclude_patterns:
   - "node_modules/"
   - "reports/"
   - "build/"
-  - "**/build/"
+  - "deps/"
   - "dist/"
+  - "docs/"
+  - "etc/"
+  - "test/"
   - "tmp/"
+  - "workshops/"
+  - "**/benchmark/"
+  - "**/build/"
+  - "**/docs/"
+  - "**/etc/"
+  - "**/examples/"
+  - "**/scripts/"
+  - "**/test/"
   - "**/tmp/"
