Ignore additional directories

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -141,11 +141,13 @@ exclude_patterns:
   - "test/"
   - "tmp/"
   - "workshops/"
+  - "**/_tools/"
   - "**/benchmark/"
   - "**/build/"
   - "**/docs/"
   - "**/etc/"
   - "**/examples/"
+  - "**/namespace/lib/"
   - "**/scripts/"
   - "**/test/"
   - "**/tmp/"
