--- a/tools/make/Makefile
+++ b/tools/make/Makefile
@@ -97,6 +97,7 @@ include $(TOOLS_MAKE_LIB_DIR)/test-browsers/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/test-ci/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/test-cov/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/test-fixtures/Makefile
+include $(TOOLS_MAKE_LIB_DIR)/test-install/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/tools-test/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/tools-test-cov/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/types-cov/Makefile
